# oh-my-cursor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VALIDATION.md  hooks.json  install.ps1  install.sh  permissions.json  plugin.json  skills.json  vercel.json
.github/: CODEOWNERS
.github/workflows/: validate-packs.yml
agents/: aang.md  appa.md  atlas.md  explore.md  generalPurpose.md  hephaestus.md  iroh.md  katara.md  librarian.md  metis.md  momo.md  momus.md  multimodal-looker.md  oracle.md  orchestrator.mdc  prometheus.md  sisyphus.md  sokka.md  toph.md  zuko.md
agents/protocols/: swarm-coordinator.md  team-avatar.md
apps/marketplace/: .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/marketplace/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/marketplace/src-tauri/capabilities/: default.json
apps/marketplace/src-tauri/icons/: icon.icns
apps/marketplace/src-tauri/src/: lib.rs  main.rs
assets/promo/: README.md  build-promo.mjs  dims.json  index.html  team-avatar-promo.json
automations/: README.md
commands/: build.md  cactus-juice.md  doc.md  fix.md  image.md  plan.md  scout.md  search.md  tasks.md
docs/: E2E-TEST.md  PACK-FORMAT.md  ROADMAP-v0.4.md  ROADMAP-v0.5-marketplace.md
hooks/: guard-shell.sh  post-edit-lint.sh  pre-commit-check.sh
packs/team-avatar/: pack.json
registry/: registry.json
rules/: orchestrator.mdc
scripts/: generate-manifests.mjs  validate-packs.mjs
skills/: MANIFEST
(+60 files in other folders)
